Fixed buttons on small screens

--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,7 @@ p {
     font-size: 1.5vh;
     font-weight: 500;
     margin-right: 1.5vh;
+    display: inline-block;
 }
 
 .btn:hover {
@@ -86,5 +87,9 @@ video {
     }
     #l0, #l1 {
         background: none;
+    }
+    .btn {
+        display: block;
+        margin-bottom: 1.5vh;
     }
 }
